# avtools

./: .gitignore  .gitmodules  MANIFEST.in  PROMPT.md  README.md  install.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt0  requirements.txt1  requirements.txt2  requirements.txt3  requirements.txt4  setup.py  transnetv2_wrapper.py
.github/workflows/: ci.yml
avtools/: __init__.py  transnetv2_wrapper.py
avtools/audio/: __init__.py  activations.py  activations_to_mp4.py  fcpxml.py  fcpxml_otio.py  json_to_fcpxml.py
avtools/cli/: __init__.py  audio_commands.py  common_commands.py  extract_frames.py  main.py  timeline_commands.py  video_commands.py
avtools/common/: __init__.py  fcpxml_utils.py  ffmpeg_utils.py  otio_utils.py
avtools/common/timeline/: io.py
avtools/video/: __init__.py  cache.py  config.py  detect.py  extract_shots.py  fcpxml.py  fcpxml_otio.py  frames.py  json_to_fcpxml.py  shots.py
docs/: index.md
docs/api/: audio.md  cli.md  common.md  video.md
docs/usage/: cli.md  installation.md
tests/: test_fcpxml_otio.py
tests/cli/: test_video_commands.py
tests/cli/common/: __init__.py  test_bed_input.py  test_common_commands.py  test_pygenometracks.py  test_timeline_commands.py
