[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.24",
    "numpy>=1.23.0",
    "torch>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "avtools"
version = "0.1.0"
description = "Audio-visual tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "Cython>=0.29.24",
    "danbooru-tag-expander>=0.1.5",
    "deepdanbooru==1.0.3",
    "ffmpeg-python==0.2.0",
    "huggingface-hub==0.28.1",
    "numpy>=1.23.0",
    "onnxruntime==1.20.1",
    "opencv-python==4.11.0.86",
    "packaging",
    "pandas==2.2.3",
    "Pillow==11.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm==4.66.2",
    "madmom @ git+https://github.com/CPJKU/madmom.git@0551aa8f48d71a367d92b5d3a347a0cf7cd97cc9#egg=madmom",
    "natten @ git+https://github.com/SHI-Labs/NATTEN.git@3b54c76185904f3cb59a49fff7bc044e4513d106#egg=natten",
    "allin1==1.1.0",
    "wd14-tagger-standalone @ git+https://github.com/allenday/wd14-tagger-standalone.git@v0.1.1",
]

[project.scripts]
avtools = "avtools.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
